Add argLine to Tycho surefire plugin